[package]
name = "rimrs"
description = "RimWorld mod manager"
version = "0.0.5"
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/Breadinator/rimrs"
repository = "https://github.com/Breadinator/rimrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gui
eframe = "0.20"
egui_extras = "0.20.0"

# logging
env_logger = "0.10.0"
log = "0.4.17"

# parsing
configparser = "3.0.2"
xml-rs = "0.8.4"

open = "3.2"
dotenv = "0.15.0"
