[package]
name = "rimrs"
description = "RimWorld mod manager"
version = "0.1.1"
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/Breadinator/rimrs"
repository = "https://github.com/Breadinator/rimrs"

[dependencies]
# gui
eframe = "0.20"
egui_extras = "0.20.0"

# logging
env_logger = "0.10.0"
log = "0.4.17"

# parsing
xml-rs = "0.8.4"

# misc
open = "3.2"
dotenv = "0.15.0"
once_cell = "1.17.0"
thiserror = "1.0.38"
