[package]
name = "rimrs"
description = "RimWorld mod manager"
version = "0.1.4"
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/Breadinator/rimrs"
repository = "https://github.com/Breadinator/rimrs"

[features]
default = ["dotenv"] # TODO remove dotenv default at v1.0.0
dotenv = ["dep:dotenv"]

[dependencies]
# gui
eframe = "0.20"
egui_extras = "0.20.0"

# logging
env_logger = "0.10.0"
log = "0.4.17"

# parsing
xml-rs = "0.8.4"

# misc
open = "3.2"
dotenv = { version = "0.15.0", optional = true }
once_cell = "1.17.0"
thiserror = "1.0.38"
tinyfiledialogs = "3.9.1"
itertools = "0.10.5"

[dev-dependencies]
rand = "0.8"
